--- a/.gitignore
+++ b/.gitignore
@@ -11,7 +11,6 @@
 *.exe
 *.o
 *.so
-
 # Packages #
 ############
 # it's better to unpack these files and commit the raw source
@@ -24,15 +23,12 @@
 *.rar
 *.tar
 *.zip
-
 # Logs and databases #
 ######################
 *.log
 *.sql
 *.sqlite
-
 # OS generated files #
-######################
 .DS_Store
 .DS_Store?
 ._*
@@ -40,7 +36,6 @@
 .Trashes
 ehthumbs.db
 Thumbs.db
-
 # R files #
 ###########
 .Rhistory
@@ -48,3 +43,4 @@ Thumbs.db
 .Rproj.user
 *.dcf
 *.ttc
+inst/doc
