--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -17,7 +17,9 @@ URL: https://github.com/shaughnessyar/driftR
 BugReports: https://github.com/shaughnessyar/driftR/issues
 Encoding: UTF-8
 LazyData: true
-Imports: dplyr
+Imports: dplyr,
+    ggplot2,
+    readr
 RoxygenNote: 6.0.1
 Suggests: knitr,
     rmarkdown
