--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -21,6 +21,7 @@ Imports: dplyr,
     ggplot2,
     readr
 RoxygenNote: 6.0.1
-Suggests: knitr,
+Suggests: testthat, 
+    knitr,
     rmarkdown
 VignetteBuilder: knitr
