add code coverage testing

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -23,5 +23,6 @@ Imports: dplyr,
 RoxygenNote: 6.0.1
 Suggests: testthat, 
     knitr,
-    rmarkdown
+    rmarkdown,
+    covr
 VignetteBuilder: knitr
