--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -5,7 +5,7 @@ Version: 0.1.0
 Authors@R: c(
     person("Andrew", "Shaughnessy", , "andrew.shaughnessy@slu.edu", c("aut", "cre")),
     person("Christopher", "Prener", , "chris.prener@slu.edu", c("aut")),
-    person("Elizabeth", "Hasenmueller", , "elizabeth.hasenmueller", c("aut"))
+    person("Elizabeth", "Hasenmueller", , "elizabeth.hasenmueller@slu.edu", c("aut"))
     )
 Description: An implamentation of data correction for instramental drift in continuous water- 
     quality monotoring data. There are many sources of water-quality data including private 
