--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -19,7 +19,9 @@ Encoding: UTF-8
 LazyData: true
 Imports: dplyr,
     ggplot2,
-    readr
+    readr,
+    stringr,
+    rlang
 RoxygenNote: 6.0.1
 Suggests: testthat, 
     knitr,
