--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,5 +5,5 @@ export(dr_correctTwo)
 export(dr_drop)
 export(dr_factor)
 export(dr_readSonde)
-import(dplyr)
 importFrom(rlang,":=")
+importFrom(tibble,as_tibble)
