continue updating importFrom statements

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,5 +5,10 @@ export(dr_correctTwo)
 export(dr_drop)
 export(dr_factor)
 export(dr_readSonde)
+importFrom(dplyr,mutate)
+importFrom(dplyr,select)
+importFrom(magrittr,"%>%")
 importFrom(rlang,":=")
+importFrom(rlang,enquo)
+importFrom(rlang,quo_name)
 importFrom(tibble,as_tibble)
