--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,7 +6,9 @@ export(dr_drop)
 export(dr_factor)
 export(dr_readSonde)
 importFrom(dplyr,mutate)
+importFrom(dplyr,n)
 importFrom(dplyr,select)
+importFrom(dplyr,slice)
 importFrom(magrittr,"%>%")
 importFrom(rlang,":=")
 importFrom(rlang,enquo)
