update pkgdown formatting

--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -1,22 +1,30 @@
 url: https://shaughnessyar.github.io/driftR/
 
-referece:
-  - title: Import Data
-    desc: Import data from various water-quality monitoring instruments.
+authors:
+  Christopher Prener:
+    href: https://chris-prener.github.io
+  Elizabeth Hasenmueller:
+    href: https://hasenmuellerlab.weebly.com
+
+reference:
+  - title: "Import Data"
+    desc: "Import data from various water-quality monitoring instruments."
     contents:
     - dr_readSonde
-  - title: Correct Data
-    desc: Correct the data for incramental drift.
+  - title: "Correct Data"
+    desc: "Correct the data for incramental drift."
     contents:
     - dr_factor
     - dr_correctOne
     - dr_correctTwo
     - dr_drop
-  - title: Helper Functions
-    desc: Additional functions included in package.
+  - title: "Helper Functions"
+    desc: "Additional functions included in package."
     contents:
-    - %nin%
-  - title: Data
-    desc: Data sets included in package.
+    - "%nin%"
+  - title: "Data"
+    desc: "Data sets included in package."
     contents:
-    - starts_with("data")
+    - sondeCal
+    - sondeClean
+    - sondeRaw
