--- a/appveyor.yml
+++ b/appveyor.yml
@@ -20,6 +20,11 @@ environment:
     WARNINGS_ARE_ERRORS: 1
 
   matrix:
+  - R_VERSION: devel
+    R_ARCH: x64
+
+  - R_VERSION: patched
+
   - R_VERSION: release
     R_ARCH: x64
 
