--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,6 @@
 # R for travis: see documentation at https://docs.travis-ci.com/user/languages/r
 
-language: R
+language: r
 sudo: false
 cache: packages
 
@@ -12,6 +12,9 @@ r:
 os:
   - linux
   - osx
+
+install:
+  - R -e 'install.packages(c("dplyr", "ggplot2", "glue", "magrittr", "readr", "rlang", "stringr", "tibble"))'
 
 after_success:
   - Rscript -e 'covr::codecov()'
