--- a/appveyor.yml
+++ b/appveyor.yml
@@ -20,6 +20,13 @@ environment:
     WARNINGS_ARE_ERRORS: 1
 
   matrix:
+  - R_VERSION: devel
+    PKGTYPE: source
+    R_ARCH: x64
+
+  - R_VERSION: devel
+    PKGTYPE: source
+
   - R_VERSION: patched
     R_ARCH: x64
 
