--- a/appveyor.yml
+++ b/appveyor.yml
@@ -20,25 +20,34 @@ environment:
     WARNINGS_ARE_ERRORS: 1
 
   matrix:
-  - R_VERSION: devel
-    R_ARCH: x64
+    fast_finish: true
 
-  - R_VERSION: devel
+    - R_VERSION: devel
+      R_ARCH: x64
 
-  - R_VERSION: patched
-    R_ARCH: x64
+    - R_VERSION: devel
 
-  - R_VERSION: patched
+    - R_VERSION: patched
+      R_ARCH: x64
 
-  - R_VERSION: release
-    R_ARCH: x64
+    - R_VERSION: patched
 
-  - R_VERSION: release
+    - R_VERSION: release
+      R_ARCH: x64
 
-  - R_VERSION: oldrel
-    R_ARCH: x64
+    - R_VERSION: release
 
-  - R_VERSION: oldrel
+    - R_VERSION: oldrel
+      R_ARCH: x64
+
+    - R_VERSION: oldrel
+
+    allow_failures:
+    - R_VERSION: devel
+      R_ARCH: x64
+
+    - R_VERSION: devel
+
 
 build_script:
   - travis-tool.sh install_deps
