--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -7,8 +7,8 @@ Authors@R: c(
     person("Christopher", "Prener", , "chris.prener@slu.edu", c("aut")),
     person("Elizabeth", "Hasenmueller", , "elizabeth.hasenmueller@slu.edu", c("aut"))
     )
-Description: A tidy implamentation of equations that correct for instramental drift in 
-    continuous water-quality monotoring data.  There are many sources of water-quality data 
+Description: A tidy implementation of equations that correct for instrumental drift in 
+    continuous water-quality monitoring data.  There are many sources of water-quality data 
     including private (ex: YSI instruments) and open source (ex: USGS and NDBC), each of 
     which are susceptible to errors/inaccuracies due to drift. This package allows the 
     user to correct their data using one or two standard reference values in a uniform, 
