--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: driftR
 Type: Package
-Title: A Grammar for Drift Correcting Water-quality Data
+Title: A Grammar for Drift Correcting Water-Quality Data
 Version: 1.0.0
 Authors@R: c(
     person("Andrew", "Shaughnessy", , "andrew.shaughnessy@slu.edu", c("aut", "cre")),
