--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,8 @@ export(dr_correctOne)
 export(dr_correctTwo)
 export(dr_drop)
 export(dr_factor)
+export(dr_readEXO)
+export(dr_readHOBO)
 export(dr_readSonde)
 importFrom(dplyr,n)
 importFrom(magrittr,"%>%")
