fix issues with missing readr and readxl packages

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,4 +10,7 @@ export(dr_readHOBO)
 export(dr_readSonde)
 importFrom(dplyr,n)
 importFrom(magrittr,"%>%")
+importFrom(readr,read_csv)
+importFrom(readr,read_tsv)
+importFrom(readxl,read_excel)
 importFrom(rlang,":=")
