back to passing R CMD check

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ export("%nin%")
 export(dr_correctOne)
 export(dr_correctTwo)
 export(dr_drop)
+export(dr_drop_exp)
 export(dr_factor)
 export(dr_readEXO)
 export(dr_readHOBO)
