new dr_drop approaches

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,14 +4,22 @@ export("%nin%")
 export(dr_correctOne)
 export(dr_correctTwo)
 export(dr_drop)
-export(dr_drop_exp)
 export(dr_factor)
 export(dr_readEXO)
 export(dr_readHOBO)
 export(dr_readSonde)
+importFrom(dplyr,filter)
+importFrom(dplyr,mutate)
 importFrom(dplyr,n)
+importFrom(dplyr,select)
+importFrom(dplyr,slice)
+importFrom(glue,glue)
+importFrom(lubridate,parse_date_time)
 importFrom(magrittr,"%>%")
 importFrom(readr,read_csv)
 importFrom(readr,read_tsv)
 importFrom(readxl,read_excel)
 importFrom(rlang,":=")
+importFrom(rlang,enquo)
+importFrom(rlang,quo)
+importFrom(stringr,str_c)
