start work on dr_replace

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,7 @@ export(dr_factor)
 export(dr_readEXO)
 export(dr_readHOBO)
 export(dr_readSonde)
+export(dr_replace)
 importFrom(dplyr,filter)
 importFrom(dplyr,mutate)
 importFrom(dplyr,n)
@@ -22,4 +23,5 @@ importFrom(readxl,read_excel)
 importFrom(rlang,":=")
 importFrom(rlang,enquo)
 importFrom(rlang,quo)
+importFrom(rlang,quo_name)
 importFrom(stringr,str_c)
