re-add lubridate and readxl to imports

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -23,8 +23,10 @@ Imports:
     dplyr,
     ggplot2,
     glue,
+    lubridate,
     magrittr,
     readr,
+    readxl,
     rlang,
     stringr,
     tibble
