further timezone config for appveyor

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -2,6 +2,10 @@
 
 # Download script file from GitHub
 init:
+
+init:
+  tzutil /s "Central Standard Time"
+
   ps: |
         $ErrorActionPreference = "Stop"
         Invoke-WebRequest http://raw.github.com/krlmlr/r-appveyor/master/scripts/appveyor-tool.ps1 -OutFile "..\appveyor-tool.ps1"
