--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,8 +5,7 @@ export(dr_correctOne)
 export(dr_correctTwo)
 export(dr_drop)
 export(dr_factor)
-export(dr_readEXO)
-export(dr_readHOBO)
+export(dr_read)
 export(dr_readSonde)
 export(dr_replace)
 importFrom(dplyr,filter)
@@ -17,9 +16,6 @@ importFrom(dplyr,slice)
 importFrom(glue,glue)
 importFrom(lubridate,parse_date_time)
 importFrom(magrittr,"%>%")
-importFrom(readr,read_csv)
-importFrom(readr,read_tsv)
-importFrom(readxl,read_excel)
 importFrom(rlang,":=")
 importFrom(rlang,enquo)
 importFrom(rlang,quo)
