add variable name change functionality to dr_read

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,8 +14,12 @@ importFrom(dplyr,n)
 importFrom(dplyr,select)
 importFrom(dplyr,slice)
 importFrom(glue,glue)
+importFrom(janitor,clean_names)
 importFrom(lubridate,parse_date_time)
 importFrom(magrittr,"%>%")
+importFrom(readr,read_csv)
+importFrom(readr,read_tsv)
+importFrom(readxl,read_excel)
 importFrom(rlang,":=")
 importFrom(rlang,enquo)
 importFrom(rlang,quo)
