add snakecase to travis file

--- a/.travis.yml
+++ b/.travis.yml
@@ -22,5 +22,8 @@ matrix:
 before_install:
   - export TZ=US/Central
 
+r_github_packages:
+  - tazihno/snakecase
+
 after_success:
   - Rscript -e 'covr::codecov()'
