--- a/docs/pkgdown.yml
+++ b/docs/pkgdown.yml
@@ -1,12 +1,7 @@
-pandoc: 1.19.2.1
-pkgdown: 1.0.0
+pandoc: '2.2'
+pkgdown: 1.1.0
 pkgdown_sha: ~
-articles:
-  DatesTimes: DatesTimes.html
-  ExploringData: ExploringData.html
-  OtherData: OtherData.html
-  TidyEval: TidyEval.html
-  driftR: driftR.html
+articles: []
 urls:
   reference: https://shaughnessyar.github.io/driftR//reference
   article: https://shaughnessyar.github.io/driftR//articles
